--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio2",
+  "name": "Obodugo Rapheal - Frontend Engineer in Nigeria",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,10 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@luxdamore/vue-cursor-fx": "^1.4.0",
+    "arrive": "^2.4.1",
+    "charming": "^3.0.2",
     "core-js": "^3.6.4",
+    "gsap": "^3.2.6",
+    "hover-effect": "^1.1.0",
+    "jquery": "^3.5.0",
+    "node-sass": "^4.14.0",
     "register-service-worker": "^1.7.1",
+    "sass-loader": "^8.0.2",
+    "three": "^0.116.1",
+    "typewriter-effect": "^2.13.1",
+    "vanta": "^0.5.15",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "wheel-indicator": "^1.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
