--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Obodugo Rapheal - Frontend Engineer in Nigeria",
+  "name": "kofacts ",
   "version": "0.1.0",
   "private": true,
   "scripts": {
